--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Editing articles</h1>
-<%= render 'form' %>
-<%= link_to 'Back', articles_path %>
+<h1>Edit existing articles</h1>
+
+<%= render "form" %>
