create new and edit forms and partials

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
   <div class="col-lg-4">
     <h3> View Recepies as Guest </h3>
     <h2> Browse and view recepies as a guest and sign up later </h2>
-    <p> <%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %> </p>
+    <p> <%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-warning btn-small" %> </p>
   </div>
   <div class="col-lg-4">
     <h3> View Recepies as Guest </h3>
