Adding paths to view

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,23 +2,23 @@
   <h1>Welcome to MyRecepies App</h1>
   <h2>This is the HomePage for the Professional Ruby on Rails Course on Udemy</h2>
   
-  <%= link_to "Sign up now!", "", class: "btn btn-large btn-success" %>
+  <%= link_to "Sign up now!", register_path, class: "btn btn-large btn-success" %>
 
 </div>
 <div class="row">
   <div class="col-lg-4">
-    <h3> View Recepies as Guest </h3>
-    <h2> Browse and view recepies as a guest and sign up later </h2>
+    <h3 class="midrow"> View Recepies as Guest </h3>
+    <h2 class="left"> Browse and view recepies as a guest and sign up later </h2>
     <p> <%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-warning btn-small" %> </p>
   </div>
   <div class="col-lg-4">
-    <h3> View Recepies as Guest </h3>
-    <h2> Browse and view recepies as a guest and sign up later </h2>
-    <p> <%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %> </p>
+    <h3 class="midrow"> Sign in to your Account </h3>
+    <h2 class="left"> Add update to your Recipes, create Reviews, like or dislike Recipes and much much more </h2>
+    <p> <%= link_to "Log in to your Account", "", class: "btn btn-warning btn-small" %> </p>
   </div>
   <div class="col-lg-4">
-    <h3> View Recepies as Guest </h3>
-    <h2> Browse and view recepies as a guest and sign up later </h2>
+    <h3 class="midrow"> View Recepies as Guest </h3>
+    <h2 class="left"> Browse and view recepies as a guest and sign up later </h2>
     <p> <%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %> </p>
   </div>
 
