--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
   <div class="col-lg-4">
     <h3 class="midrow"> Sign in to your Account </h3>
     <h2 class="left"> Add update to your Recipes, create Reviews, like or dislike Recipes and much much more </h2>
-    <p> <%= link_to "Log in to your Account", "", class: "btn btn-warning btn-small" %> </p>
+    <p> <%= link_to "Log in to your Account", login_path, class: "btn btn-warning btn-small" %> </p>
   </div>
   <div class="col-lg-4">
     <h3 class="midrow"> View Recepies as Guest </h3>
