Cleanup UI and stylesheet

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-  <h1>Welcome to MyRecepies App</h1>
+  <h1>Welcome to MyRecipes App</h1>
   <h2>This is the HomePage for the Professional Ruby on Rails Course on Udemy</h2>
   
   <%= link_to "Sign up now!", register_path, class: "btn btn-large btn-success" %>
