--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,12 @@ float: left;
 margin-top: 20px;
 }
 
+.nav_ul_item {
+padding-left: 25px;
+float: left;
+margin-top: 20px;
+}
+
 .center {
 text-align: center;
 }
@@ -85,6 +91,11 @@ input, textarea, select, .uneditable-input {
   width: 100%;
   margin-bottom:15px;
 }
+
+.input_checkbox input {
+  width: auto !important;
+}
+
 
 input {
   height: auto !important;
